test/error/ast/SetElemMaxNotConvertToInt.mod
MODULE SetElemMaxNotConvertToInt;
VAR s: SET; i: INTEGER;
BEGIN
  s := {0..31};
  i := ORD(s);
END SetElemMaxNotConvertToInt.
